// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SliderField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  min-width: 220px;
  max-width: 640px;
}

.emotion-0[data-options='true'] {
  margin-bottom: 16px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-5 {
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
  min-width: 40px;
  -webkit-align-self: end;
  -ms-flex-item-align: end;
  align-self: end;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.emotion-9 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  height: 8px;
  width: 100%;
  min-width: 220px;
  background-color: #e9eaeb;
  border-radius: 4px;
  background-image: linear-gradient(#8c40ef, #8c40ef);
  background-repeat: no-repeat;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  outline: none;
}

.emotion-9:focus::-moz-range-thumb {
  border: 1.5px solid #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-9:focus::-webkit-slider-thumb {
  border: 1.5px solid #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-9[data-error='true'] {
  background-image: linear-gradient(#e51963, #e51963);
}

.emotion-9[data-direction='column'] {
  -webkit-align-self: baseline;
  -ms-flex-item-align: baseline;
  align-self: baseline;
}

.emotion-9[aria-disabled='true'] {
  background-image: linear-gradient(#d8c5fc, #d8c5fc);
}

.emotion-9::-moz-range-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-9::-moz-range-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  pointer-events: all;
  width: 16px;
  height: 16px;
  background: #ffffff;
  box-shadow: 0px 0px 2px 0px #22263829,0px 2px 4px 0px #2226381f;
  border-radius: 100%;
  border: none;
  cursor: -webkit-grab;
  cursor: grab;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
}

.emotion-9::-moz-range-thumb:hover,
.emotion-9::-moz-range-thumb:active,
.emotion-9::-moz-range-thumb:focus {
  border: 1.5px solid #8c40ef;
}

.emotion-9::-moz-range-thumb:active,
.emotion-9::-moz-range-thumb:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  cursor: -webkit-grabbing;
  cursor: grabbing;
}

.emotion-9::-webkit-slider-runnable-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-9::-webkit-slider-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  pointer-events: all;
  width: 16px;
  height: 16px;
  background: #ffffff;
  box-shadow: 0px 0px 2px 0px #22263829,0px 2px 4px 0px #2226381f;
  border-radius: 100%;
  border: none;
  cursor: -webkit-grab;
  cursor: grab;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
}

.emotion-9::-webkit-slider-thumb:hover,
.emotion-9::-webkit-slider-thumb:active,
.emotion-9::-webkit-slider-thumb:focus {
  border: 1.5px solid #8c40ef;
}

.emotion-9::-webkit-slider-thumb:active,
.emotion-9::-webkit-slider-thumb:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  cursor: -webkit-grabbing;
  cursor: grabbing;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        class="emotion-0 emotion-1"
        data-options="false"
      >
        <div
          class="emotion-2 emotion-3"
        >
          <span
            class="emotion-4 emotion-5 emotion-6"
            data-testid="slider-value"
          >
            0
          </span>
          <div
            class="emotion-7 emotion-3"
          >
            <input
              aria-label="test"
              class="emotion-9 emotion-10"
              data-direction="column"
              data-error="false"
              id=":r0:"
              max="100"
              min="0"
              name="test"
              step="1"
              style="background-size: 0% 100%;"
              tabindex="0"
              type="range"
              value="0"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SliderField > should render correctly disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  min-width: 220px;
  max-width: 640px;
}

.emotion-0[data-options='true'] {
  margin-bottom: 16px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-5 {
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
  min-width: 40px;
  -webkit-align-self: end;
  -ms-flex-item-align: end;
  align-self: end;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.emotion-9 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  height: 8px;
  width: 100%;
  min-width: 220px;
  background-color: #e9eaeb;
  border-radius: 4px;
  background-image: linear-gradient(#8c40ef, #8c40ef);
  background-repeat: no-repeat;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  outline: none;
}

.emotion-9[data-error='true'] {
  background-image: linear-gradient(#e51963, #e51963);
}

.emotion-9[data-direction='column'] {
  -webkit-align-self: baseline;
  -ms-flex-item-align: baseline;
  align-self: baseline;
}

.emotion-9[aria-disabled='true'] {
  background-image: linear-gradient(#d8c5fc, #d8c5fc);
}

.emotion-9::-moz-range-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-9::-moz-range-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  pointer-events: all;
  width: 16px;
  height: 16px;
  background: #ffffff;
  box-shadow: 0px 0px 2px 0px #22263829,0px 2px 4px 0px #2226381f;
  border-radius: 100%;
  border: none;
  cursor: not-allowed;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
}

.emotion-9::-moz-range-thumb:hover,
.emotion-9::-moz-range-thumb:active,
.emotion-9::-moz-range-thumb:focus {
  border: null;
}

.emotion-9::-moz-range-thumb:active,
.emotion-9::-moz-range-thumb:focus {
  box-shadow: null;
  cursor: not-allowed;
}

.emotion-9::-webkit-slider-runnable-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-9::-webkit-slider-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  pointer-events: all;
  width: 16px;
  height: 16px;
  background: #ffffff;
  box-shadow: 0px 0px 2px 0px #22263829,0px 2px 4px 0px #2226381f;
  border-radius: 100%;
  border: none;
  cursor: not-allowed;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
}

.emotion-9::-webkit-slider-thumb:hover,
.emotion-9::-webkit-slider-thumb:active,
.emotion-9::-webkit-slider-thumb:focus {
  border: null;
}

.emotion-9::-webkit-slider-thumb:active,
.emotion-9::-webkit-slider-thumb:focus {
  box-shadow: null;
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        aria-label="Slider Input"
        class="emotion-0 emotion-1"
        data-options="false"
      >
        <div
          class="emotion-2 emotion-3"
        >
          <span
            class="emotion-4 emotion-5 emotion-6"
            data-testid="slider-value"
          >
            0
          </span>
          <div
            class="emotion-7 emotion-3"
          >
            <input
              aria-disabled="true"
              aria-label="Slider Input"
              class="emotion-9 emotion-10"
              data-direction="column"
              data-error="false"
              disabled=""
              id=":r3:"
              max="100"
              min="0"
              name="test"
              step="1"
              style="background-size: 0% 100%;"
              tabindex="0"
              type="range"
              value="0"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
